--- a/example_1/server/site/templates/registration.html
+++ b/example_1/server/site/templates/registration.html
@@ -1,15 +1,15 @@
 {% extends 'index.html' %}
 
 {% block content %}
-    <h2>Registration</h2>
+    <h2>{{ lang['-registration-']['registration'] }}</h2>
     <form name="registrate" method="post" action="/registration">
-        <p>Login:</p>
+        <p>{{ lang['-registration-']['login'] }}:</p>
         <input type="text" size="40" maxlength="15" required name="login">
-        <p>Password:</p>
-        <input type="text" size="40" maxlength="20" required name="password">
-        <p>Repeat password:</p>
-        <input type="text" size="40" maxlength="20" required name="repeat_password">
+        <p>{{ lang['-registration-']['password'] }}:</p>
+        <input type="password" size="40" maxlength="20" required name="password">
+        <p>{{ lang['-registration-']['password-repeat'] }}:</p>
+        <input type="password" size="40" maxlength="20" required name="repeat_password">
 
-        <p><input type="submit" value="Accept"></p>
+        <p><input class="button" type="submit" value="{{ lang['-registration-']['registration-accept'] }}"></p>
     </form>
 {% endblock %}
