--- a/example_1/server/site/templates/index.html
+++ b/example_1/server/site/templates/index.html
@@ -3,23 +3,95 @@
  <head>
   <meta charset="utf-8" />
   <title>Site</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
   
   <style>
 
-div {
-    width: 100%;
-    height: 50px;
-    
-    font-size: 15px;
+body {
+  margin: 11px;
+  margin-left: 0px;
+}
 
-    border-bottom: 0.5px black solid;
+textarea, .text, input {
+  border: none;
+  cursor: pointer;
+}
+
+.button {
+  border: none;
+  cursor: pointer;
+}
+
+.article_div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin: 0px;
+    margin-left: 23%;
+    margin-bottom: 5%;
+
+    padding: 0px;
+
+    width: 50%;
+    height: fit-content;
+
+    background-color: white;
+
+    padding-left: 2%;
+    padding-right: 2%;
+}
+
+.articles_div {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+
+    margin: 0px;
+    margin-left: 23%;
+    margin-bottom: 0.5%;
+
+    padding: 0px;
+
+    padding-left: 2%; 
+    padding-right: 2%;
+
+    width: 50%;
+    height: fit-content;
+
+    background-color: white;
+}
+
+h3 {
+    font-weight: normal;
+}
+
+header {
+    margin-top: -7px;
+    margin-left: -8px;
+
+    width: 101%;
+}
+
+header div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    width: 100%;
+}
+
+html {
+    font-family: 'Noto Sans', sans-serif;
 }
 
 li {
     list-style: none;
     display: flex;
     flex-direction: row;
-    margin-left: 55%;
 }
 
 a {
@@ -31,18 +103,144 @@ a:hover {
     color: royalblue;
 }
 
+footer {
+    margin-left: -8px;
+    width: 101%;
+    height: 5%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    padding-bottom: -20px;
+
+    margin-bottom: -17px;
+
+    text-align: left;
+}
+
   </style>
 
  </head>
  <body>
+
+    {% if 'background_color' in request.cookies %}
+        {% if request.cookies['background_color'] == 'white' %}
+            <style>
+                .article_div, .articles_div {
+                    background-color: #f6f5f3;;
+                }
+                input, textarea, .text, .button {
+                    background-color: white;
+                    border: 0.5px rgb(43, 43, 43) solid;
+                }
+                html {
+                    background-color: #ffffff;
+                }
+                footer {
+                    background-color: #f6f5f3;
+                }
+                header {
+                    background-color: #f6f5f3;
+                }
+            </style>
+        {% elif request.cookies['background_color'] == 'black' %}
+            <style>
+                * {
+                    color: white
+                }
+                .article_div, .articles_div {
+                    background-color: rgb(43, 43, 43);
+                }
+                input, textarea {
+                    background-color: rgb(43, 43, 43);
+                }
+
+                html {
+                    background-color: #575757;
+                }
+                footer {
+                    background-color: rgb(43, 43, 43);
+                }
+                header {
+                    background-color: rgb(43, 43, 43);
+                }
+            </style>
+        {% elif request.cookies['background_color'] == 'yellow' %}
+            <style>
+                .article_div, .articles_div {
+                    background-color: #FFDAB9;
+                }
+                input, textarea {
+                    background-color: white;
+                }
+                html {
+                    background-color: #FFCC99;
+                }
+                footer {
+                    background-color: #FFDAB9;
+                }
+                header {
+                    background-color: #FFDAB9;
+                }
+            </style>
+        {% else %}
+            <style>
+                .article_div, .articles_div {
+                    background-color: #f6f5f3;;
+                }
+                input, textarea, .text, .button {
+                    background-color: white;
+                    border: 0.5px rgb(43, 43, 43) solid;
+                }
+                html {
+                    background-color: #ffffff;
+                }
+                footer {
+                    background-color: #f6f5f3;
+                }
+                header {
+                    background-color: #f6f5f3;
+                }
+            </style>
+        {% endif %}
+    
+    {% else %}
+        <style>
+            .article_div, .articles_div {
+                background-color: #f6f5f3;;
+            }
+            input, textarea, .text, .button {
+                background-color: white;
+                border: 0.5px rgb(43, 43, 43) solid;
+            }
+            html {
+                background-color: #ffffff;
+            }
+            footer {
+                background-color: #f6f5f3;
+                }
+            header {
+                background-color: #f6f5f3;
+            }
+        </style>
+    {% endif %}
+
     <header>
         <div>
             <li>
-                <ul><a href="/">Главная</a></ul>
-                <ul><a href="/info">Информация</a></ul>
-                <ul><a href="/articles">Статьи</a></ul>
-                <ul><a href="/registration">Регистрация</a></ul>
-                <ul><a href="/login">Вход</a></ul>
+                <ul><a href="/">{{ lang['-site-interface-']['header']['main'] }}</a></ul>
+            </li>
+            <li>
+                {% if logged %}
+                <ul><a href="/info">{{ lang['-site-interface-']['header']['cabinet'] }}</a></ul>
+                <ul><a href="/articles">{{ lang['-site-interface-']['header']['articles'] }}</a></ul>
+                <ul><a href="/chat">{{ lang['-site-interface-']['header']['chat'] }}</a></ul>
+                <ul><a href="/logout">{{ lang['-site-interface-']['header']['exit'] }}</a></ul>
+                {% elif not logged %}
+                <ul><a href="/registration">{{ lang['-site-interface-']['header']['registration'] }}</a></ul>
+                <ul><a href="/login">{{ lang['-site-interface-']['header']['login'] }}</a></ul>
+                {% endif %}
             </li>
         </div>
     </header>
@@ -53,8 +251,8 @@ a:hover {
     </main>
 
     <footer>
-        <div style="border-top: 0.5px black solid; border-bottom: none">
-            <h3>For more info check my <a href="https://vk.com">page</a></h3>
+        <div>
+            <h4>{{ lang['-site-interface-']['footer']['link'] }}</h4>
         </div>
     </footer>
  </body>
